<resources>
    <string name="app_name">DegreeMap</string>
    <string name="title_activity_main">WGU Degree Mapper</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_term">Terms</string>
    <string name="btnTerms">Terms</string>
    <string name="btnBack">Main</string>
    <string name="title_activity_term_add">Add Term</string>
    <string name="title_activity_term_details">Term Details</string>
    <string name="title_activity_term_edit">Edit Term</string>
    <string name="terms">Terms</string>
    <string name="courses">Courses</string>
    <string name="term_name">Term Name</string>
    <string name="term_start_date">Term Start Date</string>
    <string name="term_end_date">Term End Date</string>
    <string name="add_course">Add Course</string>
    <string name="save_term">Save Term</string>
    <string name="add_term">Add Term</string>
    <string name="title_activity_course">Courses</string>
    <string name="title_activity_course_add">Add Course</string>
    <string name="title_activity_course_edit">Edit Course</string>
    <string name="title_activity_course_details">Course Details</string>
    <string name="title_activity_assessment">Assessments</string>
    <string name="title_activity_assessment_add">Add Assessment</string>
    <string name="title_activity_assessment_details">Assessment Details</string>
    <string name="title_activity_assessment_edit">Edit Assessment</string>
    <string name="title_activity_mentor">Mentors</string>
    <string name="title_activity_mentor_add">Add Mentor</string>
    <string name="title_activity_mentor_details">Mentor Details</string>
    <string name="title_activity_mentor_edit">Edit Mentor</string>
    <string name="edit_term">Edit Term</string>
    <string name="delete_term">Delete Term</string>
    <string name="course_name">Course Name</string>
    <string name="course_start_date">Course Start Date</string>
    <string name="course_end_date">Course End Date</string>
    <string name="course_status">Course Status</string>
    <string name="course_notes">Course Notes</string>
    <string name="save_course">Save Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="mentor">Mentor</string>
    <string name="add">Add</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="mentor_phone">Mentor Phone Number</string>
    <string name="mentor_email">Mentor Email Address</string>
    <string name="save_mentor">Save Mentor</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_due_date">Assessment Due Date</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="assessment_notes">Assessment Notes</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="mentors">Mentors</string>
    <string name="assessments">Assessments</string>
    <string name="edit_mentor">Edit Mentor</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="course">Course</string>
    <string name="term">Term</string>
    <string name="share_notes">Share Notes</string>
</resources>