<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/courseDetails_EditCourseMenu"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_course"
        app:showAsAction="always"/>

    <item android:id="@+id/courseDetails_DeleteCourseMenu"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_course"
        app:showAsAction="always"/>

    <item android:id="@+id/courseDetails_Share"
    android:title="@string/share_notes"
    android:icon="@drawable/ic_share"
    app:showAsAction="ifRoom"/>

    <item android:id="@+id/courseDetails_AlertStart"
        android:title="Set Alert Start Date"
        android:icon="@drawable/ic_alert"
        app:showAsAction="never"/>

    <item android:id="@+id/courseDetails_AlertEnd"
        android:title="Set Alert End Date"
        android:icon="@drawable/ic_alert"
        app:showAsAction="never"/>


</menu>