<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/activity_content_base"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/assessmentDetails_AssessmentNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/assessmentDetails_AssessmentName"
            style="@style/text_noneditable"
            android:hint="@string/assessment_name" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/assessmentDetails_AssessmentDueDateLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/assessmentDetails_AssessmentDueDate"
            style="@style/date_field"
            android:hint="@string/assessment_due_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/assessmentDetails_TypeDropdownLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assessment_type"
        app:endIconMode="dropdown_menu">

        <AutoCompleteTextView
            android:id="@+id/assessmentDetails_TypeDropdownTextView"
            style="@style/text_noneditable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-- Select --" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/assessmentDetails_AssessmentNotesLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assessment_notes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/assessmentDetails_AssessmentNotes"
            style="@style/text_noneditable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/assessmentDetails_CourseDropdownLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course"
        app:endIconMode="dropdown_menu">

        <AutoCompleteTextView
            android:id="@+id/assessmentDetails_CourseDropdownTextView"
            style="@style/text_noneditable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="-- Select --" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>